fix overflow

--- a/staging/index.css
+++ b/staging/index.css
@@ -3,7 +3,7 @@ nav#navbar {
   justify-content: flex-start;
   align-items: center;
   background-color: #FFF;
-  width: 100%;
+  width: 100vw;
   height: 50px;
   box-shadow: 0px 0px 4px #333;
   position: fixed;
@@ -70,6 +70,7 @@ nav#navbar .nav-logo img {
   background-color: #208996;
   box-shadow: 0px -1px 4px #333;
   padding: 10px 0 0 0;
+  overflow-x: hidden;
 }
 .tickets-wrapper h2 {
   color: white;
@@ -99,12 +100,12 @@ nav#navbar .nav-logo img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  line-height: 15px;
+  line-height: 20px;
 }
 .tickets-wrapper .tickets .ticket h5 {
   margin: 0;
   color: #000;
-  font-size: 18px;
+  font-size: 25px;
   font-family: fondy;
   font-weight: 500;
 }
@@ -162,6 +163,9 @@ footer .social-media-buttons img {
     transform: translateX(282px);
   }
 }
+.music-wrapper {
+  overflow-x: hidden;
+}
 .music-wrapper .music {
   display: flex;
   flex-direction: column;
@@ -189,6 +193,7 @@ footer .social-media-buttons img {
 }
 .music-wrapper .music > img {
   height: 300px;
+  width: 100%;
   opacity: 10%;
   z-index: 1;
   position: absolute;
@@ -230,6 +235,7 @@ footer .social-media-buttons img {
 .kharboushe-wrapper {
   background-color: #FFF;
   padding: 10px 0 0 0;
+  overflow-x: hidden;
 }
 .kharboushe-wrapper .kharboushe-title {
   display: flex;
@@ -264,6 +270,7 @@ footer .social-media-buttons img {
 .kharboushe-wrapper .kharboushe {
   height: 100px;
   box-shadow: 0px -1px 4px #333;
+  overflow-x: hidden;
 }
 .kharboushe-wrapper .kharboushe p {
   margin: 0;
